@@ -1,3 +1,4 @@
+lblIconSize = Icon Size
 lblSearchIsbn = Search by ISBN
 lblCollection = Collection
 lblArchiveOrgCollection = collections:
