@@ -96,7 +96,9 @@
 							<div class="ui-g">
 								<div class="ui-g-10">
 									<p:graphicImage value="#{imageBean.content}"
-										rendered="#{item.icon.alive}" cache="false">
+										rendered="#{item.icon.alive}" cache="false" 
+										width="#{userSettingsBean.iconSize}" 
+										height="#{userSettingsBean.iconSize}">
 										<f:param name="filename" value="#{item.icon.filename}" />
 									</p:graphicImage>
 									&nbsp;
